--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -12,7 +12,10 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: checkout with submodules
+      uses: actions/checkout@v4
+      with:
+        submodules: recursive
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
